--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,20 @@
 streamlit>=1.37
 python-dotenv>=1.0
-sentence-transformers>=2.7
 pinecone>=5.0.0
 cohere>=5.5
 groq>=0.9
-numpy>=1.26
 pytest>=8.2
 python-dotenv>=1.0
 PyPDF2>=3.0.0
+
+--extra-index-url https://download.pytorch.org/whl/cpu
+
+sentence-transformers==3.2.1
+transformers>=4.40,<5
+torch==2.2.2
+numpy>=1.26
+scipy>=1.11
+tokenizers>=0.15
+tqdm>=4.66
+requests>=2.31
+urllib3>=2.2
